<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.localweather.LocalWeatherFragment">

        <TextView
            android:id="@+id/locationIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toronto"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/cloudy"
            app:layout_constraintEnd_toStartOf="@+id/temperatureTv"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationIdTv"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/temperatureTv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/temperatureTv"
            android:textSize="72sp"
            app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weatherIcon"
            app:layout_constraintTop_toTopOf="@+id/weatherIcon" />

        <TextView
            android:id="@+id/weatherDescriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/light_rain"
            app:layout_constraintEnd_toEndOf="@+id/temperatureTv"
            app:layout_constraintStart_toStartOf="@+id/weatherIcon"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon"
            tools:layout_editor_absoluteY="227dp" />

        <TextView
            android:id="@+id/lowTemperatureTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/l_5"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/highTemperatureTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/weatherIcon"
            app:layout_constraintTop_toBottomOf="@+id/weatherDescriptionTv" />

        <TextView
            android:id="@+id/highTemperatureTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_12"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/lowTemperatureTv"
            app:layout_constraintEnd_toEndOf="@+id/temperatureTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lowTemperatureTv"
            app:layout_constraintTop_toTopOf="@+id/lowTemperatureTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>